# Lemma

./: .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CTestConfig.cmake  README  README.md  WindowsBuild.bat
LemmaCore/: CMakeLists.txt  lemma.h
LemmaCore/examples/: CMakeLists.txt  datatem.cpp  dipolesource.cpp  filter.cpp  utORS.cpp  utQWEKey.cpp  utSerialize.cpp  utSkyTEM.cpp  utTEMSurvey.cpp  utXMLParse.cpp  utYAMLconfig.cpp  utgaussquad.cpp  uthantenna.cpp  uttemforward.cpp  uttemreader.cpp  uttemsandbox.cpp
LemmaCore/include/: AEMSurvey.h  ASCIIParser.h  CubicSplineInterpolator.h  DCIPElectrode.h  DCSurvey.h  Data.h  DataReader.h  EarthModel.h  FHTKey101.h  FHTKey51.h  Filter.h  Grid.h  GridReader.h  Instrument.h  LayeredEarth.h  LayeredEarthEMReader.h  Lemma  LemmaCore  LemmaCore.h  LemmaObject.h  ParticleSwarmOptimizer.h  PolygonalWireAntenna.h  QWEKey.h  RectilinearGrid.h  RectilinearGridReader.h  RectilinearGridVTKExporter.h  TEMInductiveReceiver.h  TEMReceiver.h  TEMSurveyLine.h  TEMSurveyLineData.h  TEMSurveyLineRecord.h  WindowFilter.h  banner.h  bicgstab.h  data.h  datafem.h  datareader.h  datareaderfem.h  datareaderfemubc.h  digitalfiltercostrans.h  (+27 more)
LemmaCore/src/: AEMSurvey.cpp  AEMSurveyReader.cpp  ASCIIParser.cpp  CMakeLists.txt  CubicSplineInterpolator.cpp  DCIPElectrode.cpp  DCSurvey.cpp  Data.cpp  DataReader.cpp  EarthModel.cpp  FHTKey101.cpp  FHTKey51.cpp  Filter.cpp  Grid.cpp  GroundedElectricDipole.cpp  Instrument.cpp  LayeredEarth.cpp  LemmaObject.cpp  ParticleSwarmOptimizer.cpp  QWEKey.cpp  RectilinearGrid.cpp  RectilinearGridReader.cpp  RectilinearGridVTKExporter.cpp  TEMReceiver.cpp  TEMSurvey.cpp  TEMSurveyData.cpp  TEMSurveyLineData.cpp  TEMSurveyLineRecordData.cpp  UngroundedElectricDipole.cpp  WindowFilter.cpp  banner.cpp  costransintegrationkernel.cpp  data.cpp  datafem.cpp  datareader.cpp  datareaderfem.cpp  datareaderfemubc.cpp  datatem.cpp  digitalfiltercostrans.cpp  digitalfiltersintrans.cpp  (+27 more)
LemmaCore/testing/: CMakeLists.txt  GetNameCheck.h  SerializeCheck.h  testOne.cpp  testTwo.cpp
Modules/DCIP/: CMakeLists.txt
Modules/DCIP/config/: DCIPConfig.h.in
Modules/DCIP/examples/: DCIPElectrode.cpp
Modules/DCIP/include/: DCIP  DCIPElectrode.h  DCSurvey.h
Modules/DCIP/src/: CMakeLists.txt  DCIPElectrode.cpp  DCSurvey.cpp
Modules/FDEM1D/: AEMSurveyReader.h  CMakeLists.txt  FDEM1D.dox  README
Modules/FDEM1D/examples/: Bench.sh  CMakeLists.txt  CircularLoop.cpp  DipoleSource.cpp  EMDipEarth1D.cpp  Eantenna.cpp  FHT.cpp  FieldPoints.cpp  Hantenna.cpp  LayeredEarthEM.cpp  PolygonalWireAntenna.cpp  dipolefreqsweep.cpp  emdipearth1d.cpp  femforward.cpp  plottimings.py
Modules/FDEM1D/include/: AEMSurvey.h  AEMSurveyReader.h  ChargedWellCasing.h  CircularLoop.h  CompactSupportEMSource.h  DigitalFilterIntegratorAnderson.h  DipoleSource.h  EMEarth1D.h  FDEM1D  FHT.h  FHTAnderson801.h  FHTKey.h  FHTKey101.h  FHTKey201.h  FHTKey51.h  FastCosTransformAnderson.h  FastSinTransformAnderson.h  FieldPoints.h  GQChave.h  GroundedElectricDipole.h  HankelTransform.h  HankelTransformFactory.h  IntegrationKernel.h  KernelEM1DBase.h  KernelEM1DManager.h  KernelEM1DReflBase.h  KernelEM1DReflSpec.h  KernelEM1DSpec.h  LayeredEarthEM.h  LayeredEarthEMReader.h  MagneticDipole.h  PolygonalWireAntenna.h  QWEKey.h  UngroundedElectricDipole.h  WireAntenna.h  costransintegrationkernel.h  digitalfilterintegrator.h  digitalfiltersintrans.h  emearth1d.h  hankeltransform.h  (+14 more)
Modules/FDEM1D/matlab/: CMakeLists.txt  hantenna_mex.cpp
Modules/FDEM1D/python/: CMakeLists.txt  pyFDEM1D.cpp
Modules/FDEM1D/src/: AEMSurvey.cpp  AEMSurveyReader.cpp  CMakeLists.txt  ChargedWellCasing.cpp  CircularLoop.cpp  CompactSupportEMSource.cpp  DigitalFilterIntegratorAnderson.cpp  DipoleSource.cpp  EMEarth1D.cpp  FHT.cpp  FHTAnderson801.cpp  FHTKey.cpp  FHTKey101.cpp  FHTKey201.cpp  FHTKey51.cpp  FastCosTransformAnderson.cpp  FastSinTransformAnderson.cpp  FieldPoints.cpp  GQChave.cpp  HankelTransform.cpp  IntegrationKernel.cpp  KernelEM1DManager.cpp  KernelEM1DReflSpec.cpp  KernelEM1DSpec.cpp  LayeredEarthEM.cpp  LayeredEarthEMReader.cpp  MagneticDipole.cpp  PolygonalWireAntenna.cpp  QWEKey.cpp  WireAntenna.cpp  datafem.cpp  datareaderfem.cpp  digitalfiltercostrans.cpp  digitalfilterintegrator.cpp  edipole.cpp  gaussianquadrature.cpp  hankeltransform.cpp  hankeltransformhankel2.cpp  integrationkernel.cpp  inversesolver.cpp  (+5 more)
Modules/FDEM1D/testing/: BenchKiHa.h  CMakeLists.txt  GetNameCheck.h  SerializeCheck.h
Modules/LemmaCore/: CMakeLists.txt  LemmaCore.dox
Modules/LemmaCore/examples/: CMakeLists.txt  CubicSplineInterpolator.cpp  filter.cpp  utgmrprint.cpp  uthankel2.cpp  utlogbarriercg.cpp  utpolygonalantenna.cpp  utreadfemubc.cpp  utsandbox.cpp  utteminv1d.cpp  wireantenna.cpp
Modules/LemmaCore/include/: ASCIIParser.h  CubicSplineInterpolator.h  Data.h  DataReader.h  EarthModel.h  Filter.h  Grid.h  GridReader.h  Instrument.h  LayeredEarth.h  LemmaCore  LemmaObject.h  ProgressBar.h  RectilinearGrid.h  RectilinearGridReader.h  RectilinearGridVTKExporter.h  RectilinearGridVTKImporter.h  WindowFilter.h  helper.h  lemma.h  timer.h
Modules/LemmaCore/python/: CMakeLists.txt  __init__.py  pyLemmaCore.cpp
Modules/LemmaCore/src/: ASCIIParser.cpp  CMakeLists.txt  CubicSplineInterpolator.cpp  Data.cpp  DataReader.cpp  EarthModel.cpp  Filter.cpp  Grid.cpp  Instrument.cpp  LayeredEarth.cpp  LemmaObject.cpp  ProgressBar.cpp  RectilinearGrid.cpp  RectilinearGridReader.cpp  RectilinearGridVTKExporter.cpp  RectilinearGridVTKImporter.cpp  WindowFilter.cpp  helper.cpp
Modules/LemmaCore/testing/: CMakeLists.txt  CopyDisableCheck.h  GetNameCheck.h  SerializeCheck.h
Modules/TEM1D/: CMakeLists.txt
Modules/TEM1D/examples/: CMakeLists.txt  TEMSurvey.cpp
Modules/TEM1D/include/: InstrumentTEM.h  TEM1D  TEMInductiveReceiver.h  TEMReceiver.h  TEMSurvey.h  TEMSurveyData.h  TEMSurveyLineRecordData.h  TEMTransmitter.h  datareadertem.h  datatem.h  inversesolvertem1d.h  modelreadertem1d.h  temintegrationkernel.h
Modules/TEM1D/src/: CMakeLists.txt  InstrumentTEM.cpp  TEMInductiveReceiver.cpp  (+6 more)
(+37 files in other folders)
